@@ -14,15 +14,20 @@ Database local automaticamente gerada pos Startup: `data/restaurarte.db`
 
 Arquivo Main: `src/main/java/me.faseh.restaurarte/Main.java`
 
-## Como instalar o programa
+# Como instalar o programa
 Utilizando o Gradle e o Git possivel executar o programa atraves do terminal, segue o passo a passo:
 
 `git clone https://github.com/meinards15/trabalho-algoritimo.git`
+
 `cd trabalho-algoritimo`
-`./gradlew run --console=plain --enable-native-access=ALL-UNNAMED`
+
+`./gradlew run --console=plain`
 
 (Certifique-se que possui o Java 21 instalado no seu sistema, Caso não o possua você pode clicar [aqui](https://download.oracle.com/java/21/archive/jdk-21.0.10_windows-x64_bin.exe) para instalar-lo.)
 
 ## Os PDFs de Apresentação e Documentação podem ser encontrados dentro do diretorio abaixo:
-`PDFs/`
+**`PDFs/`**
+
 [Apresentacao](https://www.canva.com/design/DAHMqHu_rLY/b25VkhNTqoIpD7h0SIy_Tw/edit)
+
+[Documentação](https://docs.google.com/document/d/16lPF6LFCRczKtRdC9M2pdv3LvbUiTxCx_fO1Q2CQ9hk/edit?usp=sharing)
